# knot

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  ct.yaml  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  helm-ci.yaml  release.yaml
crates/knot-auth/: Cargo.toml
crates/knot-auth/src/: csrf.rs  lib.rs  oidc.rs  session_token.rs  throttle.rs
crates/knot-config/: Cargo.toml
crates/knot-config/src/: lib.rs
crates/knot-config/tests/: load.rs
crates/knot-crdt/: Cargo.toml
crates/knot-crdt/examples/: board_hydrate.rs
crates/knot-crdt/src/: board_registry.rs  board_room.rs  bus.rs  bus_mem.rs  bus_pg.rs  lib.rs  presence.rs  protocol.rs  registry.rs  room.rs  writer.rs
crates/knot-crdt/tests/: board_fanout.rs  bus_pg.rs
crates/knot-docs/: Cargo.toml
crates/knot-docs/src/: acl.rs  cache.rs  listener.rs
crates/knot-docs/tests/: listener_integration.rs
crates/knot-markdown/src/: from_markdown.rs  lib.rs  schema.rs  tasks.rs  to_markdown.rs
crates/knot-markdown/tests/: round_trip.rs
crates/knot-markdown/tests/fixtures/: tables.md  tasklists.md
crates/knot-obs/src/: metrics.rs
crates/knot-server/: Cargo.toml
crates/knot-server/src/: admin.rs  board_room_shim.rs  comments_listener.rs  lib.rs  main.rs  protocol.rs  reindex.rs  room.rs  security_headers.rs
crates/knot-server/src/auth/: context.rs  cookies.rs  mod.rs  require_doc_role.rs  session_loader.rs
crates/knot-server/src/routes/: health.rs  mod.rs  public.rs
crates/knot-server/src/routes/api/: blobs.rs  boards.rs  comments.rs  docs.rs  export_import.rs  grants.rs  history.rs  markdown.rs  mod.rs  shares.rs  tasks.rs  workspace.rs
crates/knot-server/src/routes/auth/: config.rs  local.rs  mod.rs  oidc.rs  setup.rs
crates/knot-server/tests/: admin_cli_integration.rs  auth_config_integration.rs  auth_local_integration.rs  auth_oidc_integration.rs  auth_password_integration.rs  auth_setup_integration.rs  blobs_integration.rs  comments_integration.rs  convergence.rs  docs_integration.rs  grants_integration.rs  history_integration.rs  http_hardening_integration.rs  search_integration.rs  shares_integration.rs  tasks_live_reindex.rs  templates_integration.rs  workspace_invite_password_integration.rs
crates/knot-storage/: Cargo.toml
crates/knot-storage/src/: blobs.rs  boards.rs  comments.rs  doc_store.rs  grant_store.rs  invalidations.rs  lib.rs  markdown_cache.rs  pool.rs  search.rs  session_store.rs  share_tokens.rs  snapshot_store.rs  tasks.rs  workspace_store.rs
crates/knot-storage/src/blobs/: pg.rs  s3.rs
crates/knot-storage/tests/: boards.rs  documents.rs  grants.rs  invalidations.rs  markdown_cache.rs  migrations_apply.rs  sessions.rs  snapshots.rs  tasks.rs  updates.rs  users.rs  workspace_members.rs  workspaces.rs
crates/knot-test-support/: Cargo.toml
crates/knot-test-support/src/: lib.rs
deploy/compose/: dev.yml
deploy/compose/dex/: config.yaml
deploy/helm/knot/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
deploy/helm/knot/ci/: ct-values.yaml
deploy/helm/knot/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  migrate-job.yaml  prometheusrule.yaml  secret.yaml  serviceaccount.yaml
docs/: SLO.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-02-auth-completion.md  2026-06-03-chaos-ws-reconnect.md  2026-06-03-mermaid-diagrams.md  2026-06-03-observability.md  2026-06-03-prefix-search.md  2026-06-03-ui-modernization.md  2026-06-04-datetime-picker.md  2026-06-04-doc-templates.md  2026-06-04-task-due-dates.md  2026-06-04-tasks-live-reindex.md  2026-06-23-board-horizontal-scaling.md  2026-06-23-doc-edit-mode-and-discoverability.md  2026-06-23-doc-tree-reorder-robustness.md  2026-06-23-invite-display-name.md  2026-06-23-login-page-conditional-options.md  2026-06-23-realtime-comment-updates.md  2026-06-24-create-doc-placement.md  2026-06-24-hardening-1-http-edge.md  2026-06-24-hardening-2-session-cookie.md  2026-06-24-hardening-3-latent-cleanup.md  2026-06-24-hardening-4-test-gaps.md
docs/superpowers/research/: 2026-06-03-plan10-outcome.md  2026-06-03-plan12.5-outcome.md  2026-06-03-plan16-outcome.md  2026-06-03-plan22-outcome.md  2026-06-03-plan25-outcome.md  2026-06-03-plan8-outcome.md  2026-06-20-image-and-chart-release-outcome.md
docs/superpowers/specs/: 2026-06-01-knot-foundation-design.md  2026-06-23-board-horizontal-scaling-design.md  2026-06-23-doc-edit-mode-and-discoverability-design.md  2026-06-23-doc-tree-reorder-robustness-design.md  2026-06-23-invite-display-name-design.md  2026-06-23-login-page-conditional-options-design.md  2026-06-23-realtime-comment-updates-design.md  2026-06-24-create-doc-placement-design.md  2026-06-24-security-robustness-hardening-design.md
e2e/: playwright.config.ts
e2e/flows/: change-password.spec.ts  command-palette.spec.ts  comments-realtime.spec.ts  comments.spec.ts  create-placement.spec.ts  editor-toolbar.spec.ts  editor.spec.ts  excalidraw.spec.ts  health.spec.ts  history.spec.ts  import-export.spec.ts  invite-password.spec.ts  login.spec.ts  mermaid.spec.ts  new-doc-edit-mode.spec.ts  oidc.spec.ts  search.spec.ts  share-link.spec.ts  theme.spec.ts  tree-dnd.spec.ts  tree-reorder.spec.ts  two-users-converge.spec.ts  upload-image.spec.ts  ws-reconnect.spec.ts
migrations/: 20260603223832_comment_anchor_end.sql  20260619120000_acl_invalidations_index.sql  20260623143322_heal_doc_cycles.sql
tools/: schema.json
tools/schemagen/tests/fixtures/: expected.rs.golden  expected.ts.golden
web/: SECURITY-NOTES.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  routes.tsx
web/src/auth/: session.api.ts  useEffectiveRole.ts
web/src/components/: AppShell.tsx  CommandPalette.tsx  ErrorBoundary.tsx  StatusDot.tsx  Toast.tsx
web/src/lib/: blobs.api.ts  comments.api.ts  history.api.ts  queryClient.ts  sanitize.test.ts  sanitize.ts  shares.api.ts  validators.ts
web/src/stores/: ui.ts
web/src/styles/: prose.css
(+49 files in other folders)
