[workspace]
resolver = "2"
members = [
    "tools/schemagen",
    "crates/knot-auth",
    "crates/knot-config",
    "crates/knot-crdt",
    "crates/knot-docs",
    "crates/knot-markdown",
    "crates/knot-obs",
    "crates/knot-storage",
    "crates/knot-server",
    "crates/knot-test-support",
]

[workspace.package]
edition = "2024"
rust-version = "1.80"
license = "Apache-2.0"
authors = ["Niklas Voss <niklas.voss@gmail.com>"]
repository = "https://github.com/trevex/knot"

[workspace.dependencies]
# Async runtime + utilities
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Web
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br", "fs"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"

# Error handling
thiserror = "2"
anyhow = "1"

# CRDT
yrs = "0.21"

# Markdown parsing
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Config
figment = { version = "0.10", features = ["env", "toml", "yaml"] }

# Codegen
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Testing
proptest = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros", "ipnetwork"] }
tokio-postgres = "0.7"
# mTLS for the PgBus tokio-postgres connection (rustls; ring provider chosen
# explicitly since aws-lc-rs is also in the graph).
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
ipnetwork = "0.20"

# Testing — containers
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Concurrency primitives
dashmap = "6"
bytes = "1"

# Auth primitives
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
cookie = "0.18"
openidconnect = { version = "4", features = ["reqwest"] }
# Regex for matching extra OIDC token audiences (IdPs like Zitadel add several).
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
