[package]
name = "knot-auth"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
argon2.workspace = true
rand.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true
openidconnect.workspace = true
regex.workspace = true

[features]
fast-params = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time", "test-util"] }
