[package]
name = "knot-crdt"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
yrs.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true
tracing.workspace = true
dashmap.workspace = true
bytes.workspace = true
tokio-postgres.workspace = true
futures-util.workspace = true
base64.workspace = true

[dev-dependencies]
sqlx.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
