[package]
name = "knot-crdt"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
yrs.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true
tracing.workspace = true
dashmap.workspace = true
bytes.workspace = true
tokio-postgres.workspace = true
futures-util.workspace = true
base64.workspace = true
sqlx.workspace = true
knot-storage = { path = "../knot-storage" }

[dev-dependencies]
sqlx.workspace = true
knot-test-support = { path = "../knot-test-support" }
async-trait.workspace = true
