[package]
name = "knot-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[lib]
name = "knot_server"
path = "src/lib.rs"

[[bin]]
name = "knot-server"
path = "src/main.rs"

[dependencies]
knot-auth = { path = "../knot-auth" }
knot-config = { path = "../knot-config" }
knot-crdt = { path = "../knot-crdt" }
knot-docs = { path = "../knot-docs" }
knot-markdown = { path = "../knot-markdown" }
knot-obs = { path = "../knot-obs" }
knot-storage = { path = "../knot-storage" }
axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
sqlx.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
futures = "0.3"
anyhow.workspace = true
thiserror.workspace = true
cookie.workspace = true
chrono.workspace = true
async-trait.workspace = true
url.workspace = true
openidconnect.workspace = true
clap.workspace = true
dotenvy = "0.15"
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
serde_json.workspace = true
metrics = "0.24"
regex = "1"
multer = "3"
pulldown-cmark.workspace = true
# HTML sanitizer for the anonymous public share page: pulldown-cmark passes
# raw HTML and unsafe link schemes through verbatim, which is stored XSS on
# /p/:token. ammonia is pure-Rust (musl/scratch friendly).
ammonia = "4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Allocator: mimalloc on all platforms knot actually runs on.
# musl's default mallocng has known throughput cliffs under multi-threaded
# small-object churn (lots of small Yjs update buffers, WS frames, per-room
# tokio tasks). mimalloc is the chosen mitigation:
#   - excellent multi-threaded throughput, comparable to jemalloc
#   - first-class ARM support (Apple Silicon, Graviton, Ampere) — knot
#     needs to ship multi-arch images
#   - CMake build, Nix-friendly (jemalloc's autotools configure stumbles
#     on Nix's gcc layout)
#   - smaller binary cost than jemalloc, simpler integration
# cfg gate keeps Windows dev builds working without the C dep.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
yrs.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
knot-auth = { path = "../knot-auth", features = ["fast-params"] }
http-body-util = "0.1"
knot-test-support = { path = "../knot-test-support" }
