[package]
name = "knot-storage"
version = "0.0.0"
edition.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
