[package]
name = "knot-storage"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
ipnetwork.workspace = true

[dev-dependencies]
knot-test-support = { path = "../knot-test-support" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
